--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@
     font-weight: 400;
     font-style: normal;
     font-size: 20px;
-    text-align: center;
+    text-align: justify;
 
 }
 
@@ -49,7 +49,7 @@
     font-family: "Abhaya Libre", serif;
     font-weight: 700;
     font-style: normal;
-    font-size: 17px;
+    font-size: 20px;
 }
 
 .half-gradient-background {
@@ -256,7 +256,7 @@ html {
 /*Dark mode*/
 
 .dark-mode .containerform {
-    background-color: #121212;
+    background-color: #1f1f1f;
     color: #ffffff;
 }
 
@@ -266,10 +266,20 @@ html {
 }
 
 .dark-mode .bgtext,
-.dark-mode .bgtext2 {
+.dark-mode .bgtext2{
     background-color: #1f1f1f;
     color: #ffffff;
 }
+
+.dark-mode .half-gradient-background {
+    height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(to bottom, #1f1f1f 50%, #1f1f1f 50%);
+
+}
+
 
 .dark-mode .btn,
 .dark-mode .nav-link,
